# reis

./: .gitignore  .mutation-baseline  .pip-audit-ignores  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  SPEC_REF  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  nightly.yml  publish.yml  security-audit.yml  spec-sync.yml  tests.yml
scripts/: pip_audit_ignores.py  vendor_spec_fixtures.py
src/reis/: __init__.py  _multihash.py  _spdx.py  catalog.py  cli.py  config.py  live.py  model.py  rule.py  runner.py  schema.py  structural.py
src/reis/data/: __init__.py  checks.py  reader.py
src/reis/rules/: __init__.py  _common.py  assets.py  bbox.py  conformance.py  files.py  license.py  links.py  partitions.py  provenance.py  providers.py  temporal.py  titles.py  viz.py
tests/: conftest.py
tests/fixtures/profile-examples/: catalog.json  vector-collection.json  vector-partitioned-collection.json  vector-partitioned-item.json
tests/fixtures/reference-catalog/: AGENTS.md  README.md  catalog.json
tests/fixtures/reference-catalog/boundaries/: AGENTS.md  README.md  catalog.json
tests/fixtures/reference-catalog/boundaries/boston-open-space/: AGENTS.md  README.md  collection.json
tests/fixtures/reference-catalog/boundaries/boston-open-space/styles/: categorical.json  default.json  graduated.json  labeled.json
tests/fixtures/reference-catalog/boundaries/netherlands-provinces/: AGENTS.md  README.md  collection.json
tests/fixtures/reference-catalog/boundaries/netherlands-provinces/styles/: categorical.json  default.json  labeled.json
tests/fixtures/reference-catalog/boundaries/us-counties/: AGENTS.md  README.md  collection.json
tests/fixtures/reference-catalog/boundaries/us-counties/styles/: categorical.json  default.json
tests/fixtures/reference-catalog/mirror/: AGENTS.md  README.md  catalog.json
tests/fixtures/reference-catalog/mirror/san-francisco-addresses/: AGENTS.md  README.md  collection.json
tests/fixtures/reference-catalog/mirror/san-francisco-addresses/styles/: default.json
tests/fixtures/reference-catalog/raster/: AGENTS.md  README.md  catalog.json
tests/fixtures/reference-catalog/raster/sample-cog/: AGENTS.md  README.md  collection.json
tests/fixtures/reference-catalog/reference/: AGENTS.md  README.md  catalog.json
tests/fixtures/reference-catalog/reference/natural-earth-countries/: AGENTS.md  README.md  collection.json
tests/fixtures/reference-catalog/reference/natural-earth-populated-places/: AGENTS.md  README.md  collection.json
tests/fixtures/reference-catalog/tabular/: AGENTS.md  README.md  catalog.json
tests/fixtures/reference-catalog/tabular/eurostat-electricity-prices/: AGENTS.md  README.md  collection.json
tests/fixtures/schema/v0.1.0/: schema.json
tests/integration/: _data_assets.py  test_data_catalog.py  test_data_checks.py  test_data_remote.py  test_data_storage.py  test_live_remote.py  test_reference_catalog.py  test_runner_config.py  test_validate_clean.py  test_validate_kitchen_sink.py
tests/unit/: test_catalog_graph.py  test_data.py  test_data_reader.py  test_live.py  test_model.py  test_multihash.py  test_rules_assets.py  test_rules_bbox.py  test_rules_conformance.py  test_rules_files.py  test_rules_license.py  test_rules_links.py  test_rules_partitions.py  test_rules_provenance.py  test_rules_providers.py  test_rules_temporal.py  test_rules_titles.py  test_rules_viz.py  test_schema.py  test_schema_uri_invariant.py  test_structural.py
