[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reis"
version = "0.1.0"
description = "Validator and linter for Portolan catalogs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Portolan contributors" }]
dependencies = ["click>=8.1"]

[project.urls]
Homepage = "https://github.com/portolan-sdi/reis"

[project.scripts]
reis = "reis.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.8",
    "mypy>=1.13",
    "import-linter>=2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reis"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["reis"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/reis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
markers = [
    "unit: fast, isolated tests",
    "integration: end-to-end validation runs",
]

[tool.importlinter]
root_package = "reis"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "validation core must not import a CLI framework"
type = "forbidden"
source_modules = [
    "reis.model",
    "reis.catalog",
    "reis.rule",
    "reis.runner",
    "reis.config",
    "reis.rules",
]
forbidden_modules = ["click"]
