[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reis"
version = "0.1.0"
description = "Validator and linter for Portolan catalogs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Portolan contributors" }]
dependencies = ["click>=8.1", "jsonschema>=4.0", "stac-valid>=4.2"]

# The data pass (reis check --data) reads asset bytes to verify checksum, size,
# format, and extent. Its geospatial stack is heavy and optional; the core
# validator installs none of it and imports it only when the pass runs.
[project.optional-dependencies]
data = [
    "pyarrow>=12",
    "rasterio>=1.3",
    "rio-cogeo>=5",
    "pyproj>=3",
]

[project.urls]
Homepage = "https://github.com/portolan-sdi/reis"

[project.scripts]
reis = "reis.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3.6",
    "diff-cover>=9.2",
    "ruff>=0.8",
    "mypy>=1.13",
    "import-linter>=2.1",
    "pre-commit>=4.0",
    "commitizen>=4.1",
    "codespell>=2.4",
    "vulture>=2.13",
    "radon>=6.0",
    "xenon>=0.9",
    "deptry>=0.21",
    "bandit>=1.8",
    "pip>=24.2",
    "pip-audit>=2.7",
    "mutmut>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reis"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["reis"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/reis"]

# stac-valid ships no type stubs / py.typed marker.
[[tool.mypy.overrides]]
module = "stac_validator.*"
ignore_missing_imports = true

# jsonschema ships no py.typed marker; stubs live in the separate types-jsonschema.
[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

# The data-pass geospatial stack (reis[data]) ships no usable type information.
[[tool.mypy.overrides]]
module = ["pyarrow.*", "rasterio.*", "pyproj.*", "rio_cogeo.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
addopts = [
    "--tb=short",
    "--strict-markers",
    "--cov=reis",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]
markers = [
    "unit: fast, isolated tests",
    "integration: end-to-end validation runs",
    "network: exercises real validators (needs schemas.stacspec.org / schemas.portolan-sdi.org)",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.importlinter]
root_package = "reis"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "validation core must not import a CLI framework"
type = "forbidden"
source_modules = [
    "reis.model",
    "reis.catalog",
    "reis.rule",
    "reis.runner",
    "reis.config",
    "reis.rules",
]
forbidden_modules = ["click"]

# Only reis.data.checks may touch the geospatial stack; the core validator and
# the data-pass glue (entry point, byte reader) stay stdlib-only, so `import
# reis` never pulls pyarrow/rasterio/pyproj. The lazy reis.data -> checks edge is
# severed here because it fires only inside default_validator(), on demand; the
# runner -> reis.data chain then still catches any direct geo import in the glue.
# reis.data itself is not a source module: it is a package, so listing it would
# pull in reis.data.checks (the one module allowed to import the stack).
[[tool.importlinter.contracts]]
name = "only reis.data.checks may import the geospatial stack"
type = "forbidden"
source_modules = [
    "reis.model",
    "reis.catalog",
    "reis.rule",
    "reis.runner",
    "reis.config",
    "reis.rules",
    "reis.schema",
    "reis.structural",
    "reis.cli",
    "reis.data.reader",
]
forbidden_modules = ["pyarrow", "rasterio", "pyproj", "rio_cogeo"]
ignore_imports = ["reis.data -> reis.data.checks"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
major_version_zero = true

[tool.codespell]
skip = ".git,uv.lock,.venv,.mypy_cache,.ruff_cache,.pytest_cache,mutants"
# "unparseable" is a valid English variant used in rule messages
ignore-words-list = "unparseable"
check-filenames = true

[tool.vulture]
min_confidence = 80
paths = ["src/reis", "tests"]
sort_by_size = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.deptry]
known_first_party = ["reis"]
exclude = [".venv", "tests", "mutants"]

# stac-valid (the maintained successor to the deprecated stac-validator
# distribution) ships the module as `stac_validator`; map it so deptry does
# not read the import as a missing dependency.
[tool.deptry.package_module_name_map]
stac-valid = ["stac_validator"]
# rio-cogeo installs as the `rio_cogeo` import package.
rio-cogeo = ["rio_cogeo"]

[tool.mutmut]
source_paths = ["src/reis/"]
# --no-cov drops the coverage overhead and the global --cov-fail-under gate
# from addopts; mutmut 3 runs pytest in-process, so extra args must go here
# rather than in a `runner` setting (which mutmut 3 ignores).
pytest_add_cli_args = ["--no-cov", "--tb=short"]
pytest_add_cli_args_test_selection = ["tests/"]
